log/build_2022-10-23_18-35-09/py_pubsub/stderr.log
  File "/home/dunto/demo_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 55
    if !(keys[pygame.K_LEFT]):
       ^
SyntaxError: invalid syntax

